# windows_cursor

./: .cursorrules  .gitignore  CLAUDE_SAFETY_FINAL.md  MAGIC_SETUP.md  PR_DESCRIPTION.md  README.md  README_CLAUDE_SAFETY.md  SECURITY.md  claude_safety_unified.sh  directorystructure.md  package-lock.json  package.json  setup_complete_environment.sh  setup_cursor_environment.sh  setup_magic.sh  start-setup-web.sh  安全ガイドライン.md
.claude/: settings.json  settings.local.json
.claude/hooks/: bash-safety-check.py
.cursor/: indexing-docs.json  indexing.json  mcp.json
.cursor/rules/: global.mdc  webinar_livecoding.mdc
CursorCourse/: README.md
SmapleFile_input/: サンプルファイル.md  音声起こしサンプル_雑多な会議.md
config/: .marprc.yml  env.local.template
diagrams/: empire_cycle_detailed.drawio  empire_cycle_overview.drawio  webinar_tech_stack_comparison.drawio
docs/: CLEANUP_SUMMARY.md  CROSS_PLATFORM_PYTHON_SETUP.md  CURSOR_EXTENSION_RECOMMENDATION_FIX.md  DEACTIVATE_ERROR_SOLUTION.md  ENSUREPIP_ERROR_SOLUTION.md  MCP_PACKAGE_404_ERROR_SOLUTION.md  TIMESTAMP_USAGE.md
docs/setup/: MCP_SERVERS_SETUP.md  (+3 more)
mcp-time/: Dockerfile  docker-compose.yml
mcp-time/mcp-time/: pyproject.toml
mcp-time/mcp-time/src/: main.py
scripts/: get_timestamp.py  install-mcp-requirements.sh  sample_with_japanese_comments.js  start-mcp-time-python.sh  start-mcp-time.sh  update_global_timestamp.sh
setup-web/: app.js  index.html  package-lock.json  package.json  server.js  styles.css
translation-app/: TDD_EVIDENCE.md  demo-test.html  jest.config.js  next.config.js  package-lock.json  package.json
(+56 files in other folders)
