[project]
name = "mcp-time"
version = "0.1.0"
description = "MCP server for providing current time"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastmcp (>=2.10.4,<3.0.0)",
    "pytz (>=2025.2,<2026.0)"
]

[tool.poetry]
packages = [{include = "mcp_time", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
